# cuRT

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.sh  config.json  main.cpp  raymarcher.pro
camera/: camera.cpp  camera.h
kernel/: cudautils.cuh  distance.cuh  hit.cuh  intersect.cuh  light.cu  light.cuh  mat3.cuh  mat4.cuh  render.cu  render.cuh  renderdata.cuh  shape.cuh  vec3.cuh  vec4.cuh
raymarcher/: distance.h  hit.h  raymarcher.cpp  raymarcher.cu  raymarcher.h  scene.cpp  scene.h
scenefiles/intersect/: directional_light_2.json  parse_matrix.json  phong_total.json  point_light_1.json  spot_light_1.json  unit_cone.json  unit_cube.json  unit_cylinder.json  unit_sphere.json
shader/: shader.cpp  shader.h
src/: enum.rs  main.rs  parser.rs  trace.rs  utils.rs  window.rs
utils/: cudautils.cuh  openglutils.h  rgba.cuh  rgba.h  scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  sceneparser.h
window/: mainwindow.h  window.cpp  window.h
